kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: symptomap
  labels:
    name: symptomap
    app: symptomap
    environment: production
